<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/toolbar"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:background="@color/orange">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/noteeditor_title_text"
            android:layout_width="336dp"
            android:layout_height="47dp"
            android:ems="10"
            android:hint="@string/note_editor_title_hint_text"
            android:inputType="textPersonName"
            android:singleLine="true" />
    </RelativeLayout>


</androidx.appcompat.widget.Toolbar>