...
            android:text="@string/title_text"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/notebookPopupCreateButton"
            android:layout_width="120dp"
            android:layout_height="51dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/darkBlue"
            android:text="@string/create_button"
            app:layout_constraintStart_toEndOf="@+id/notebookPopupCancelButton"
            app:layout_constraintTop_toBottomOf="@+id/notebookPopupEditText" />

        <TextView
            android:id="@+id/notebookPopupHeaderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="102dp"
...
