...
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/darkOrange"
            android:orientation="vertical">

            <TextView
                android:id="@+id/notebookTitle"
                android:layout_width="399dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:background="@color/orange"
                android:fadingEdge="horizontal|vertical"
...
